--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="My diet app"
     />
-    <title>React App</title>
+    <title>My diet app</title>
   </head>
   <body>
    
